2014年8月24日 16点版本
1
修复数据库update中存在的问题，remind表中没有reminderID和eventID导致不能执行update的语句采用setString
NotEmpty()
2  整理接口，打包成appinterface Repository
3  以后这个文件夹作为 功能、BUG的更新出，新建出来的Celebrity Purple、LinkedIn Grey、Original
LightBrown作为配色更改的地方

--- a/Xmu Lecture/res/layout/mycenter.xml
+++ b/Xmu Lecture/res/layout/mycenter.xml
@@ -23,14 +23,14 @@
 			android:orientation="vertical" >
 			
 			<TextView
-		android:id="@+id/top_textView"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center"
-		android:paddingTop="3dp"
-		android:text="厦大讲座网"
-		android:textColor="@color/main_menu_pressed"
-		android:textSize="25sp" />
+			    android:id="@+id/top_textView"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_gravity="center"
+			    android:paddingTop="3dp"
+			    android:text="厦大讲座网"
+			    android:textColor="@color/item_transparent"
+			    android:textSize="25sp" />
 
 			<TextView
 				android:id="@+id/personal"
