--- a/Xmu Lecture/res/layout/pop_menu.xml
+++ b/Xmu Lecture/res/layout/pop_menu.xml
@@ -1,21 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/exit_dialog"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/exit_dialog"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:background="#00000000"
 	android:gravity="center_horizontal"
-	android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
+	android:orientation="vertical" >
+	
+    <RelativeLayout
+	    
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="#00000000"
+		android:layout_above="@+id/pop_layout"
+		android:gravity="center_horizontal"
+		android:orientation="vertical" >
+		
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/logo_white" />
+        
+	</RelativeLayout>
 	
 	<LinearLayout
-		android:id="@+id/pop_layout"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:layout_alignParentBottom="true"
-		android:background="#d2ffffff"
-		android:gravity="center_horizontal"
-		android:orientation="vertical"
-		android:paddingBottom="5dp"
-		android:weightSum="4" >
+	    android:id="@+id/pop_layout"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentBottom="true"
+	    android:background="#c7ffffff"
+	    android:gravity="center_horizontal"
+	    android:orientation="vertical"
+	    android:weightSum="4" >
 		
 		<ImageView
 			android:layout_width="match_parent"
@@ -31,11 +48,12 @@
 			android:weightSum="3" >
 
 			<RelativeLayout
-				android:id="@+id/about_app"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_weight="1"
-				android:paddingBottom="10dp" >
+			    android:id="@+id/about_app"
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent"
+			    android:layout_weight="1"
+			    android:background="@drawable/popwindow_selector"
+			    android:paddingBottom="10dp" >
 
 				<ImageView
 					android:layout_width="match_parent"
@@ -56,11 +74,12 @@
 			</RelativeLayout>
 
 			<RelativeLayout
-				android:id="@+id/about_xmu_lecture"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_weight="1"
-				android:paddingBottom="10dp" >
+			    android:id="@+id/about_xmu_lecture"
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent"
+			    android:layout_weight="1"
+			    android:background="@drawable/popwindow_selector"
+			    android:paddingBottom="10dp" >
 
 				<TextView
 					android:id="@+id/textView2"
@@ -81,11 +100,12 @@
 			</RelativeLayout>
 
 			<RelativeLayout
-				android:id="@+id/about_author"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_weight="1"
-				android:paddingBottom="10dp" >
+			    android:id="@+id/about_author"
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent"
+			    android:layout_weight="1"
+			    android:background="@drawable/popwindow_selector"
+			    android:paddingBottom="10dp" >
 
 				<ImageView
 					android:layout_width="match_parent"
@@ -106,11 +126,13 @@
 		</LinearLayout>
 
 		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="50dp"
-			android:layout_marginTop="10dp"
-			android:layout_weight="1"
-			android:orientation="vertical" >
+		    android:layout_width="match_parent"
+		    android:layout_height="55dp"
+		    android:layout_marginTop="10dp"
+		    android:layout_weight="1"
+		    android:background="#b7ffffff"
+		    android:orientation="vertical"
+		    android:paddingBottom="5dp" >
 
 			<ImageView
 				android:layout_width="match_parent"
@@ -121,14 +143,15 @@
 				android:background="@color/item_line" />
 			
 			<ImageView
-				android:id="@+id/pop_exitImageView"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_marginTop="3dp"
-				android:paddingBottom="3dp"
-				android:paddingTop="3dp"
-				android:scaleType="center"
-				android:src="@drawable/pop_exit" />
+			    android:id="@+id/pop_exitImageView"
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent"
+			    android:layout_marginTop="3dp"
+			    android:background="@drawable/popwindow_selector"
+			    android:paddingBottom="3dp"
+			    android:paddingTop="3dp"
+			    android:scaleType="center"
+			    android:src="@drawable/pop_exit" />
 			
 		</LinearLayout>
 	</LinearLayout>
