--- a/Xmu Lecture/res/values/colors.xml
+++ b/Xmu Lecture/res/values/colors.xml
@@ -23,6 +23,8 @@
 	<color name="item_title_yellow">#ffd625</color>
 	<color name="item_title_orange">#ff7339</color>
 	
-	<color name="test1">#efc5beb2</color>
+	<color name="popwindow_pressed">#07000000</color>
+	<color name="button_normal">#804f3e62</color>
+	<color name="button_pressed">#324f3e62</color>
 			
 </resources>
